--- a/App_LUMINOVA/templates/deposito/deposito.html
+++ b/App_LUMINOVA/templates/deposito/deposito.html
@@ -172,28 +172,27 @@
             </thead>
             <tbody class="bg-white text-dark">
                 <tr>
-                    <th class="text-white text-center" style="background-color: #014BAC; width: 20%;">ID</th>
+                    <th class="text-white text-center" style="background-color: #014BAC; width: 20%;">N° OC</th>
                     <th class="text-white" style="background-color: #014BAC; width: 45%;">Insumo</th>
                     <th class="text-white text-center" style="background-color: #014BAC; width: 20%;">Stock Actual</th>
                     <th class="text-white text-center" style="background-color: #014BAC; width: 15%;">Pedido</th>
                 </tr>
-                {% for insumo_bajo_stock_item in insumos_con_stock_bajo_list %}
+                {% for item in insumos_con_stock_bajo_list %}
                 <tr class="{% if forloop.counter|divisibleby:2 %}table-row-even{% else %}table-row-odd{% endif %}">
-                    <td class="text-white text-center">{{ insumo_bajo_stock_item.id }}</td>
-                    <td class="text-white">{{ insumo_bajo_stock_item.descripcion|truncatechars:25 }}</td>
-                    <td class="text-white text-center fw-bold text-danger">{{ insumo_bajo_stock_item.stock }}</td>
                     <td class="text-white text-center">
-                        {% if insumo_bajo_stock_item.cantidad_en_pedido > 0 %}
-                        <button class="btn btn-sm btn-secondary" disabled
-                            title="Ya existe una OC o cantidad en pedido para este insumo. Revise Compras.">
-                            <i class="bi bi-hourglass-split"></i>
-                        </button>
+                        {% if item.oc and item.oc.estado != "CANCELADA" %}
+                        {{ item.oc.numero_orden }}
                         {% else %}
-                        <a href="{% url 'App_LUMINOVA:compras_seleccionar_proveedor_para_insumo' insumo_bajo_stock_item.id %}"
-                            class="btn btn-sm btn-warning"
-                            title="Gestionar Compra para {{ insumo_bajo_stock_item.descripcion }}">
-                            <i class="bi bi-cart-plus-fill"></i>
-                        </a>
+                        -
+                        {% endif %}
+                    </td>
+                    <td class="text-white">{{ item.insumo.descripcion|truncatechars:25 }}</td>
+                    <td
+                        class="text-white text-center fw-bold {% if item.insumo.stock < umbral_stock_bajo %}text-danger{% endif %}">
+                        {{ item.insumo.stock }}</td>
+                    <td class="text-white text-center">
+                        {% if item.oc %}
+                        <span title="En espera de recepción"><i class="bi bi-hourglass-split"></i></span>
                         {% endif %}
                     </td>
                 </tr>
